@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.kordamp.ikonli</groupId>
       <artifactId>ikonli-javafx</artifactId>
-      <version>12.3.1</version>
+      <version>12.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -76,9 +76,27 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>openjfx-monocle</artifactId>
+      <version>21.0.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>at.technikum</groupId>
       <artifactId>common</artifactId>
       <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.18.3</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.18.3</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
@@ -95,8 +113,17 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.2</version>
         <configuration>
-          <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
-          <argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+          <argLine>
+            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
+            --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+          </argLine>
           <additionalClasspathElements>
             <additionalClasspathElement>${project.build.testOutputDirectory}</additionalClasspathElement>
           </additionalClasspathElements>
